# vakaheim

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
crates/vakaheim/: Cargo.toml
crates/vakaheim-bytes/: Cargo.toml
crates/vakaheim-bytes/src/: lib.rs
crates/vakaheim-core/: Cargo.toml
crates/vakaheim-core/src/: lib.rs
crates/vakaheim/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  RELEASE_PLAN.md  VERSION_PLAN.md  github-security-settings.md  initial-idea.md  modularity-policy.md  platform-support.md  publishing-policy.md  release-runbook.md  security-controls.md  supply-chain-security.md  threat-model.md  toolchain-policy.md  unsafe-policy.md
release-notes/: RELEASE_NOTES_0.1.0.md
sbom/: vakaheim.spdx.json
scripts/: check_doc_links.sh  check_latest_tools.sh  check_portable_targets.sh  check_release_plan.sh  check_shell_syntax.sh  checks.sh  compare_sbom.py  generate-sbom.sh  release_0_1_gate.sh  validate-engineering-policy.sh  validate-modularity-policy.sh  validate-publishing-policy.sh  validate-release-metadata.sh  validate-release-readiness.sh  validate-security-policy.sh
security/pentest/: README.md
