[workspace]
members = [
    "crates/vakaheim",
    "crates/vakaheim-bytes",
    "crates/vakaheim-core",
]
default-members = ["crates/vakaheim"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
license = "EUPL-1.2"
authors = ["Vakaheim contributors"]
homepage = "https://github.com/valkyoth/vakaheim"
repository = "https://github.com/valkyoth/vakaheim"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[workspace.dependencies]
vakaheim-bytes = { path = "crates/vakaheim-bytes", version = "=0.1.0" }
vakaheim-core = { path = "crates/vakaheim-core", version = "=0.1.0" }

[profile.dev]
overflow-checks = true

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.test]
overflow-checks = true
