[package]
name = "vakaheim-bytes"
description = "Checked byte-boundary crate for Vakaheim."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
