[package]
name = "vakaheim-core"
description = "Dependency-free foundational contracts for Vakaheim."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
